[package]
name = "eve-corp-market"
version = "0.0.1"
publish = false

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
percent-encoding = "2.1.0"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = "0.2"
base64 = "0.12"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "serve"]
